all: Use GitHub Actions caching

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,30 @@ jobs:
       with:
         go-version: ${{matrix.go}}
 
+    - name: Get Go cache path
+      id: go-cache
+      run: |
+        echo "::set-output name=goos::$(go env GOOS)"
+        echo "::set-output name=goarch::$(go env GOARCH)"
+        echo "::set-output name=goversion::$(go env GOVERSION)"
+        echo "::set-output name=gocache::$(go env GOCACHE)"
+        echo "::set-output name=gomodcache::$(go env GOMODCACHE)"
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Go build cache
+      uses: actions/cache@v2
+      with:
+        path: ${{steps.go-cache.outputs.gocache}}
+        key: ${{steps.go-cache.outputs.goversion}}-${{steps.go-cache.outputs.goos}}-${{steps.go-cache.outputs.goarch}}-go-build-${{hashFiles('**/go.sum')}}
+
+    - name: Go mod cache
+      uses: actions/cache@v2
+      with:
+        path: ${{steps.go-cache.outputs.gomodcache}}
+        key: ${{steps.go-cache.outputs.goversion}}-${{steps.go-cache.outputs.goos}}-${{steps.go-cache.outputs.goarch}}-go-mod-${{hashFiles('**/go.sum')}}
+
     - name: Go test
       run: go test -v ./...
 
