--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,8 +53,4 @@ jobs:
       run: go vet ./...
 
     - name: Go staticcheck
-      uses: dominikh/staticcheck-action@v1.2.0
-      with:
-        version: "2022.1.1"
-        install-go: false
-        cache-key: ${{ matrix.go }}
+      run: go run honnef.co/go/tools/cmd/staticcheck@2022.1.3 ./...
